--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,9 @@
 @import "tailwindcss";
 
-@theme {
+/* @theme {
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
-}
+} */
 
 :root {
   --background: #ffffff;
@@ -18,7 +18,7 @@
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  background-color: white !important;
+  color-scheme: light;
+  color: black;
 }
